--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <item>Einstein Bros. Bagels</item>
     <item>Firehouse Subs</item>
     <item>Fresh Food Company</item>
-    <item>Au Bon Pain</item>
+    <item>Gator Corner Dining Center</item>
     <item>Au Bon Pain</item>
     </string-array>
 </resources>
